# Broforce-Templates

./: .gitattributes  .gitignore  README.md
Scripts/: BroforceGlobal.example.props  BroforceModBuild.targets  LocalBroforcePath.example.props  broforce-tools.example.json  broforce-tools.py  broforce_tools.py  create-project.py  flake.nix  pyproject.toml  setup.py  sync-targets.sh
Scripts/completions/: broforce-tools  broforce-tools-completion.ps1
Scripts/src/broforce_tools/: __init__.py  __main__.py  cli.py  colors.py  completion_helper.py  config.py  paths.py  project.py  project_types.py  templates.py  thunderstore.py
Scripts/test-fixtures/: README.md  config.json
Scripts/test-fixtures/repos/AnotherRepo/AnotherBro/_ModContent/: AnotherBro.mod.json
Scripts/test-fixtures/repos/AnotherRepo/OtherMod/_ModContent/: Info.json
Scripts/test-fixtures/repos/AnotherRepo/Releases/AnotherBro/: README.md  manifest.json
Scripts/test-fixtures/repos/AnotherRepo/Releases/OtherMod/: Changelog.md  README.md  manifest.json
Scripts/test-fixtures/repos/TestRepo/NewMod/_ModContent/: Info.json
Scripts/test-fixtures/repos/TestRepo/Releases/TestBro/: README.md  manifest.json
Scripts/test-fixtures/repos/TestRepo/TestBro/: TestBro.csproj
Scripts/test-fixtures/repos/TestRepo/TestMod/: TestMod.csproj
Scripts/tests/: conftest.py  test_colors.py  test_config.py  test_create.py  test_ctx_invoke.py  test_paths.py  test_project.py  test_project_discovery.py  test_project_types.py  test_templates.py  test_thunderstore.py
ThunderstorePackage/: README.md  manifest.json
(+9 files in other folders)
